settings page cards, switch sizing, wiring, and i18n labels

--- a/crates/choreo_i18n/assets/i18n/ar.toml
+++ b/crates/choreo_i18n/assets/i18n/ar.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "الإعدادات"
 DarkModeLabel = "الوضع الداكن"
+SettingsUseSystemThemeLabel = "استخدام سمة النظام"
+SettingsPrimaryColorLabel = "اللون الأساسي"
+SettingsSecondaryColorLabel = "اللون الثانوي"
+SettingsTertiaryColorLabel = "اللون الثلاثي"
 AppTitle = "عارض تصميم الرقصات"
 ChoreographyAuthorPlaceholder = "المؤلف"
 ChoreographyCommentPlaceholder = "تعليق"
