--- a/crates/choreo_i18n/assets/i18n/az.toml
+++ b/crates/choreo_i18n/assets/i18n/az.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Ayarlar"
 DarkModeLabel = "Tünd rejim"
+SettingsUseSystemThemeLabel = "Sistem mövzusunu istifadə et"
+SettingsPrimaryColorLabel = "Əsas rəng"
+SettingsSecondaryColorLabel = "İkinci dərəcəli rəng"
+SettingsTertiaryColorLabel = "Üçüncü dərəcəli rəng"
 AppTitle = "Xoreoqrafiya görüntüləyicisi"
 ChoreographyAuthorPlaceholder = "Müəllif"
 ChoreographyCommentPlaceholder = "Şərh"
