--- a/crates/choreo_i18n/assets/i18n/be.toml
+++ b/crates/choreo_i18n/assets/i18n/be.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Налады"
 DarkModeLabel = "Цёмны рэжым"
+SettingsUseSystemThemeLabel = "Выкарыстоўваць сістэмную тэму"
+SettingsPrimaryColorLabel = "Асноўны колер"
+SettingsSecondaryColorLabel = "Дадатковы колер"
+SettingsTertiaryColorLabel = "Трэці колер"
 AppTitle = "Праглядальнік харэаграфіі"
 ChoreographyAuthorPlaceholder = "Аўтар"
 ChoreographyCommentPlaceholder = "Каментар"
