--- a/crates/choreo_i18n/assets/i18n/bg.toml
+++ b/crates/choreo_i18n/assets/i18n/bg.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Настройки"
 DarkModeLabel = "Тъмен режим"
+SettingsUseSystemThemeLabel = "Използвай системната тема"
+SettingsPrimaryColorLabel = "Основен цвят"
+SettingsSecondaryColorLabel = "Вторичен цвят"
+SettingsTertiaryColorLabel = "Третичен цвят"
 AppTitle = "Преглед на хореография"
 ChoreographyAuthorPlaceholder = "Автор"
 ChoreographyCommentPlaceholder = "Коментар"
