--- a/crates/choreo_i18n/assets/i18n/bn.toml
+++ b/crates/choreo_i18n/assets/i18n/bn.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "সেটিংস"
 DarkModeLabel = "ডার্ক মোড"
+SettingsUseSystemThemeLabel = "সিস্টেম থিম ব্যবহার করুন"
+SettingsPrimaryColorLabel = "প্রাথমিক রং"
+SettingsSecondaryColorLabel = "গৌণ রং"
+SettingsTertiaryColorLabel = "তৃতীয় রং"
 AppTitle = "কোরিওগ্রাফি ভিউয়ার"
 ChoreographyAuthorPlaceholder = "লেখক"
 ChoreographyCommentPlaceholder = "মন্তব্য"
