--- a/crates/choreo_i18n/assets/i18n/bs.toml
+++ b/crates/choreo_i18n/assets/i18n/bs.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Postavke"
 DarkModeLabel = "Tamni režim"
+SettingsUseSystemThemeLabel = "Koristi sistemsku temu"
+SettingsPrimaryColorLabel = "Primarna boja"
+SettingsSecondaryColorLabel = "Sekundarna boja"
+SettingsTertiaryColorLabel = "Tercijarna boja"
 AppTitle = "Pregled koreografije"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Komentar"
