--- a/crates/choreo_i18n/assets/i18n/ca.toml
+++ b/crates/choreo_i18n/assets/i18n/ca.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Configuració"
 DarkModeLabel = "Mode fosc"
+SettingsUseSystemThemeLabel = "Utilitza el tema del sistema"
+SettingsPrimaryColorLabel = "Color primari"
+SettingsSecondaryColorLabel = "Color secundari"
+SettingsTertiaryColorLabel = "Color terciari"
 AppTitle = "Visor de coreografies"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Comentari"
