--- a/crates/choreo_i18n/assets/i18n/cs.toml
+++ b/crates/choreo_i18n/assets/i18n/cs.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Nastavení"
 DarkModeLabel = "Tmavý režim"
+SettingsUseSystemThemeLabel = "Použít systémový motiv"
+SettingsPrimaryColorLabel = "Primární barva"
+SettingsSecondaryColorLabel = "Sekundární barva"
+SettingsTertiaryColorLabel = "Terciární barva"
 AppTitle = "Prohlížeč choreografie"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Komentář"
