--- a/crates/choreo_i18n/assets/i18n/da.toml
+++ b/crates/choreo_i18n/assets/i18n/da.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Indstillinger"
 DarkModeLabel = "Mørk tilstand"
+SettingsUseSystemThemeLabel = "Brug systemtema"
+SettingsPrimaryColorLabel = "Primær farve"
+SettingsSecondaryColorLabel = "Sekundær farve"
+SettingsTertiaryColorLabel = "Tertiær farve"
 AppTitle = "Koreografiviser"
 ChoreographyAuthorPlaceholder = "Forfatter"
 ChoreographyCommentPlaceholder = "Kommentar"
