--- a/crates/choreo_i18n/assets/i18n/de.toml
+++ b/crates/choreo_i18n/assets/i18n/de.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Einstellungen"
 DarkModeLabel = "Dunkelmodus"
+SettingsUseSystemThemeLabel = "Systemdesign verwenden"
+SettingsPrimaryColorLabel = "Primärfarbe"
+SettingsSecondaryColorLabel = "Sekundärfarbe"
+SettingsTertiaryColorLabel = "Tertiärfarbe"
 AppTitle = "Choreographie Viewer"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Kommentar"
