--- a/crates/choreo_i18n/assets/i18n/el.toml
+++ b/crates/choreo_i18n/assets/i18n/el.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Ρυθμίσεις"
 DarkModeLabel = "Σκοτεινή λειτουργία"
+SettingsUseSystemThemeLabel = "Χρήση θέματος συστήματος"
+SettingsPrimaryColorLabel = "Πρωτεύον χρώμα"
+SettingsSecondaryColorLabel = "Δευτερεύον χρώμα"
+SettingsTertiaryColorLabel = "Τριτεύον χρώμα"
 AppTitle = "Προβολέας χορογραφίας"
 ChoreographyAuthorPlaceholder = "Συγγραφέας"
 ChoreographyCommentPlaceholder = "Σχόλιο"
