--- a/crates/choreo_i18n/assets/i18n/en.toml
+++ b/crates/choreo_i18n/assets/i18n/en.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Settings"
 DarkModeLabel = "Dark mode"
+SettingsUseSystemThemeLabel = "Use system theme"
+SettingsPrimaryColorLabel = "Primary color"
+SettingsSecondaryColorLabel = "Secondary color"
+SettingsTertiaryColorLabel = "Tertiary color"
 AppTitle = "Choreography Viewer"
 ChoreographyAuthorPlaceholder = "Author"
 ChoreographyCommentPlaceholder = "Comment"
