--- a/crates/choreo_i18n/assets/i18n/es.toml
+++ b/crates/choreo_i18n/assets/i18n/es.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Configuración"
 DarkModeLabel = "Modo oscuro"
+SettingsUseSystemThemeLabel = "Usar tema del sistema"
+SettingsPrimaryColorLabel = "Color primario"
+SettingsSecondaryColorLabel = "Color secundario"
+SettingsTertiaryColorLabel = "Color terciario"
 AppTitle = "Visor de coreografías"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Comentario"
