--- a/crates/choreo_i18n/assets/i18n/et.toml
+++ b/crates/choreo_i18n/assets/i18n/et.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Seaded"
 DarkModeLabel = "Tume režiim"
+SettingsUseSystemThemeLabel = "Kasuta süsteemi teemat"
+SettingsPrimaryColorLabel = "Põhivärv"
+SettingsSecondaryColorLabel = "Teisene värv"
+SettingsTertiaryColorLabel = "Tertsiaarne värv"
 AppTitle = "Koreograafia vaatur"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Kommentaar"
