--- a/crates/choreo_i18n/assets/i18n/fi.toml
+++ b/crates/choreo_i18n/assets/i18n/fi.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Asetukset"
 DarkModeLabel = "Tumma tila"
+SettingsUseSystemThemeLabel = "Käytä järjestelmän teemaa"
+SettingsPrimaryColorLabel = "Ensisijainen väri"
+SettingsSecondaryColorLabel = "Toissijainen väri"
+SettingsTertiaryColorLabel = "Tertiäärinen väri"
 AppTitle = "Koreografian katseluohjelma"
 ChoreographyAuthorPlaceholder = "Tekijä"
 ChoreographyCommentPlaceholder = "Kommentti"
