--- a/crates/choreo_i18n/assets/i18n/fil.toml
+++ b/crates/choreo_i18n/assets/i18n/fil.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Mga Setting"
 DarkModeLabel = "Madilim na mode"
+SettingsUseSystemThemeLabel = "Gamitin ang tema ng system"
+SettingsPrimaryColorLabel = "Pangunahing kulay"
+SettingsSecondaryColorLabel = "Pangalawang kulay"
+SettingsTertiaryColorLabel = "Tersiyaryong kulay"
 AppTitle = "Tagatingin ng koreograpiya"
 ChoreographyAuthorPlaceholder = "May-akda"
 ChoreographyCommentPlaceholder = "Komento"
