--- a/crates/choreo_i18n/assets/i18n/fo.toml
+++ b/crates/choreo_i18n/assets/i18n/fo.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Innstillingar"
 DarkModeLabel = "Myrkt støði"
+SettingsUseSystemThemeLabel = "Brúka skipanartema"
+SettingsPrimaryColorLabel = "Høvuðslitur"
+SettingsSecondaryColorLabel = "Annar litur"
+SettingsTertiaryColorLabel = "Triðji litur"
 AppTitle = "Koreografi-vísari"
 ChoreographyAuthorPlaceholder = "Høvundur"
 ChoreographyCommentPlaceholder = "Viðmerking"
