--- a/crates/choreo_i18n/assets/i18n/fr.toml
+++ b/crates/choreo_i18n/assets/i18n/fr.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Paramètres"
 DarkModeLabel = "Mode sombre"
+SettingsUseSystemThemeLabel = "Utiliser le thème du système"
+SettingsPrimaryColorLabel = "Couleur primaire"
+SettingsSecondaryColorLabel = "Couleur secondaire"
+SettingsTertiaryColorLabel = "Couleur tertiaire"
 AppTitle = "Visionneuse de chorégraphie"
 ChoreographyAuthorPlaceholder = "Auteur"
 ChoreographyCommentPlaceholder = "Commentaire"
