--- a/crates/choreo_i18n/assets/i18n/ga.toml
+++ b/crates/choreo_i18n/assets/i18n/ga.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Socruithe"
 DarkModeLabel = "Mód dorcha"
+SettingsUseSystemThemeLabel = "Úsáid téama an chórais"
+SettingsPrimaryColorLabel = "Príomhdhath"
+SettingsSecondaryColorLabel = "Dath tánaisteach"
+SettingsTertiaryColorLabel = "Dath treasach"
 AppTitle = "Breathnóir cóiréagrafaíochta"
 ChoreographyAuthorPlaceholder = "Údar"
 ChoreographyCommentPlaceholder = "Trácht"
