--- a/crates/choreo_i18n/assets/i18n/hi.toml
+++ b/crates/choreo_i18n/assets/i18n/hi.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "सेटिंग्स"
 DarkModeLabel = "डार्क मोड"
+SettingsUseSystemThemeLabel = "सिस्टम थीम का उपयोग करें"
+SettingsPrimaryColorLabel = "प्राथमिक रंग"
+SettingsSecondaryColorLabel = "द्वितीयक रंग"
+SettingsTertiaryColorLabel = "तृतीयक रंग"
 AppTitle = "कोरियोग्राफी व्यूअर"
 ChoreographyAuthorPlaceholder = "लेखक"
 ChoreographyCommentPlaceholder = "टिप्पणी"
