--- a/crates/choreo_i18n/assets/i18n/hr.toml
+++ b/crates/choreo_i18n/assets/i18n/hr.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Postavke"
 DarkModeLabel = "Tamni način"
+SettingsUseSystemThemeLabel = "Koristi temu sustava"
+SettingsPrimaryColorLabel = "Primarna boja"
+SettingsSecondaryColorLabel = "Sekundarna boja"
+SettingsTertiaryColorLabel = "Tercijarna boja"
 AppTitle = "Preglednik koreografije"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Komentar"
