--- a/crates/choreo_i18n/assets/i18n/hu.toml
+++ b/crates/choreo_i18n/assets/i18n/hu.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Beállítások"
 DarkModeLabel = "Sötét mód"
+SettingsUseSystemThemeLabel = "Rendszertéma használata"
+SettingsPrimaryColorLabel = "Elsődleges szín"
+SettingsSecondaryColorLabel = "Másodlagos szín"
+SettingsTertiaryColorLabel = "Harmadlagos szín"
 AppTitle = "Koreográfia megjelenítő"
 ChoreographyAuthorPlaceholder = "Szerző"
 ChoreographyCommentPlaceholder = "Megjegyzés"
