--- a/crates/choreo_i18n/assets/i18n/hy.toml
+++ b/crates/choreo_i18n/assets/i18n/hy.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Կարգավորումներ"
 DarkModeLabel = "Մութ ռեժիմ"
+SettingsUseSystemThemeLabel = "Օգտագործել համակարգի թեման"
+SettingsPrimaryColorLabel = "Հիմնական գույն"
+SettingsSecondaryColorLabel = "Երկրորդային գույն"
+SettingsTertiaryColorLabel = "Երրորդային գույն"
 AppTitle = "Քորեոգրաֆիայի դիտիչ"
 ChoreographyAuthorPlaceholder = "Հեղինակ"
 ChoreographyCommentPlaceholder = "Մեկնաբանություն"
