--- a/crates/choreo_i18n/assets/i18n/is.toml
+++ b/crates/choreo_i18n/assets/i18n/is.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Stillingar"
 DarkModeLabel = "Dökkt þema"
+SettingsUseSystemThemeLabel = "Nota kerfisþema"
+SettingsPrimaryColorLabel = "Aðallitur"
+SettingsSecondaryColorLabel = "Aukalitur"
+SettingsTertiaryColorLabel = "Þriðji litur"
 AppTitle = "Kóreógrafíu skoðari"
 ChoreographyAuthorPlaceholder = "Höfundur"
 ChoreographyCommentPlaceholder = "Athugasemd"
