--- a/crates/choreo_i18n/assets/i18n/it.toml
+++ b/crates/choreo_i18n/assets/i18n/it.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Impostazioni"
 DarkModeLabel = "Modalità scura"
+SettingsUseSystemThemeLabel = "Usa tema di sistema"
+SettingsPrimaryColorLabel = "Colore primario"
+SettingsSecondaryColorLabel = "Colore secondario"
+SettingsTertiaryColorLabel = "Colore terziario"
 AppTitle = "Visualizzatore di coreografia"
 ChoreographyAuthorPlaceholder = "Autore"
 ChoreographyCommentPlaceholder = "Commento"
