--- a/crates/choreo_i18n/assets/i18n/ja.toml
+++ b/crates/choreo_i18n/assets/i18n/ja.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "設定"
 DarkModeLabel = "ダークモード"
+SettingsUseSystemThemeLabel = "システムテーマを使用"
+SettingsPrimaryColorLabel = "プライマリカラー"
+SettingsSecondaryColorLabel = "セカンダリカラー"
+SettingsTertiaryColorLabel = "ターシャリカラー"
 AppTitle = "振付ビューアー"
 ChoreographyAuthorPlaceholder = "作者"
 ChoreographyCommentPlaceholder = "コメント"
