--- a/crates/choreo_i18n/assets/i18n/ka.toml
+++ b/crates/choreo_i18n/assets/i18n/ka.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "პარამეტრები"
 DarkModeLabel = "ბნელი რეჟიმი"
+SettingsUseSystemThemeLabel = "სისტემის თემის გამოყენება"
+SettingsPrimaryColorLabel = "ძირითადი ფერი"
+SettingsSecondaryColorLabel = "მეორეული ფერი"
+SettingsTertiaryColorLabel = "მესამეული ფერი"
 AppTitle = "ქორეოგრაფიის მაყურებელი"
 ChoreographyAuthorPlaceholder = "ავტორი"
 ChoreographyCommentPlaceholder = "კომენტარი"
