--- a/crates/choreo_i18n/assets/i18n/ko.toml
+++ b/crates/choreo_i18n/assets/i18n/ko.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "설정"
 DarkModeLabel = "다크 모드"
+SettingsUseSystemThemeLabel = "시스템 테마 사용"
+SettingsPrimaryColorLabel = "기본 색상"
+SettingsSecondaryColorLabel = "보조 색상"
+SettingsTertiaryColorLabel = "3차 색상"
 AppTitle = "안무 뷰어"
 ChoreographyAuthorPlaceholder = "작성자"
 ChoreographyCommentPlaceholder = "메모"
