--- a/crates/choreo_i18n/assets/i18n/lb.toml
+++ b/crates/choreo_i18n/assets/i18n/lb.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Astellungen"
 DarkModeLabel = "Däischtere Modus"
+SettingsUseSystemThemeLabel = "Benotz de System-Thema"
+SettingsPrimaryColorLabel = "Primärfaarf"
+SettingsSecondaryColorLabel = "Sekundärfaarf"
+SettingsTertiaryColorLabel = "Tertiärfaarf"
 AppTitle = "Choreografie-Viewer"
 ChoreographyAuthorPlaceholder = "Auteur"
 ChoreographyCommentPlaceholder = "Kommentar"
