--- a/crates/choreo_i18n/assets/i18n/lt.toml
+++ b/crates/choreo_i18n/assets/i18n/lt.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Nustatymai"
 DarkModeLabel = "Tamsus režimas"
+SettingsUseSystemThemeLabel = "Naudoti sistemos temą"
+SettingsPrimaryColorLabel = "Pirminė spalva"
+SettingsSecondaryColorLabel = "Antrinė spalva"
+SettingsTertiaryColorLabel = "Tretinė spalva"
 AppTitle = "Choreografijos peržiūra"
 ChoreographyAuthorPlaceholder = "Autorius"
 ChoreographyCommentPlaceholder = "Komentaras"
