--- a/crates/choreo_i18n/assets/i18n/lv.toml
+++ b/crates/choreo_i18n/assets/i18n/lv.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Iestatījumi"
 DarkModeLabel = "Tumšais režīms"
+SettingsUseSystemThemeLabel = "Lietot sistēmas tēmu"
+SettingsPrimaryColorLabel = "Primārā krāsa"
+SettingsSecondaryColorLabel = "Sekundārā krāsa"
+SettingsTertiaryColorLabel = "Terciārā krāsa"
 AppTitle = "Horeogrāfijas skatītājs"
 ChoreographyAuthorPlaceholder = "Autors"
 ChoreographyCommentPlaceholder = "Komentārs"
