--- a/crates/choreo_i18n/assets/i18n/mk.toml
+++ b/crates/choreo_i18n/assets/i18n/mk.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Поставки"
 DarkModeLabel = "Темен режим"
+SettingsUseSystemThemeLabel = "Користи системска тема"
+SettingsPrimaryColorLabel = "Примарна боја"
+SettingsSecondaryColorLabel = "Секундарна боја"
+SettingsTertiaryColorLabel = "Терцијарна боја"
 AppTitle = "Прегледувач на кореографија"
 ChoreographyAuthorPlaceholder = "Автор"
 ChoreographyCommentPlaceholder = "Коментар"
