--- a/crates/choreo_i18n/assets/i18n/mn.toml
+++ b/crates/choreo_i18n/assets/i18n/mn.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Тохиргоо"
 DarkModeLabel = "Бараан горим"
+SettingsUseSystemThemeLabel = "Системийн загвар ашиглах"
+SettingsPrimaryColorLabel = "Үндсэн өнгө"
+SettingsSecondaryColorLabel = "Хоёрдогч өнгө"
+SettingsTertiaryColorLabel = "Гуравдагч өнгө"
 AppTitle = "Бүжгийн найруулга харах"
 ChoreographyAuthorPlaceholder = "Зохиогч"
 ChoreographyCommentPlaceholder = "Тайлбар"
