--- a/crates/choreo_i18n/assets/i18n/mt.toml
+++ b/crates/choreo_i18n/assets/i18n/mt.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Impostazzjonijiet"
 DarkModeLabel = "Modalità skura"
+SettingsUseSystemThemeLabel = "Uża t-tema tas-sistema"
+SettingsPrimaryColorLabel = "Kulur primarju"
+SettingsSecondaryColorLabel = "Kulur sekondarju"
+SettingsTertiaryColorLabel = "Kulur terzjarju"
 AppTitle = "Werrej tal-koreografija"
 ChoreographyAuthorPlaceholder = "Awtur"
 ChoreographyCommentPlaceholder = "Kumment"
