--- a/crates/choreo_i18n/assets/i18n/nl.toml
+++ b/crates/choreo_i18n/assets/i18n/nl.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Instellingen"
 DarkModeLabel = "Donkere modus"
+SettingsUseSystemThemeLabel = "Systeemthema gebruiken"
+SettingsPrimaryColorLabel = "Primaire kleur"
+SettingsSecondaryColorLabel = "Secundaire kleur"
+SettingsTertiaryColorLabel = "Tertiaire kleur"
 AppTitle = "Choreografieviewer"
 ChoreographyAuthorPlaceholder = "Auteur"
 ChoreographyCommentPlaceholder = "Opmerking"
