--- a/crates/choreo_i18n/assets/i18n/no.toml
+++ b/crates/choreo_i18n/assets/i18n/no.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Innstillinger"
 DarkModeLabel = "Mørk modus"
+SettingsUseSystemThemeLabel = "Bruk systemtema"
+SettingsPrimaryColorLabel = "Primærfarge"
+SettingsSecondaryColorLabel = "Sekundærfarge"
+SettingsTertiaryColorLabel = "Tertiærfarge"
 AppTitle = "Koreografiviser"
 ChoreographyAuthorPlaceholder = "Forfatter"
 ChoreographyCommentPlaceholder = "Kommentar"
