--- a/crates/choreo_i18n/assets/i18n/pl.toml
+++ b/crates/choreo_i18n/assets/i18n/pl.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Ustawienia"
 DarkModeLabel = "Tryb ciemny"
+SettingsUseSystemThemeLabel = "Użyj motywu systemowego"
+SettingsPrimaryColorLabel = "Kolor podstawowy"
+SettingsSecondaryColorLabel = "Kolor dodatkowy"
+SettingsTertiaryColorLabel = "Kolor trzeciorzędny"
 AppTitle = "Przeglądarka choreografii"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Komentarz"
