--- a/crates/choreo_i18n/assets/i18n/pt.toml
+++ b/crates/choreo_i18n/assets/i18n/pt.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Definições"
 DarkModeLabel = "Modo escuro"
+SettingsUseSystemThemeLabel = "Usar tema do sistema"
+SettingsPrimaryColorLabel = "Cor primária"
+SettingsSecondaryColorLabel = "Cor secundária"
+SettingsTertiaryColorLabel = "Cor terciária"
 AppTitle = "Visualizador de coreografia"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Comentário"
