--- a/crates/choreo_i18n/assets/i18n/rm.toml
+++ b/crates/choreo_i18n/assets/i18n/rm.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Preferenzas"
 DarkModeLabel = "Modus stgir"
+SettingsUseSystemThemeLabel = "Dovrar il tema dal sistem"
+SettingsPrimaryColorLabel = "Colur primar"
+SettingsSecondaryColorLabel = "Colur secundar"
+SettingsTertiaryColorLabel = "Colur terziar"
 AppTitle = "Visur da coreografias"
 ChoreographyAuthorPlaceholder = "Autur"
 ChoreographyCommentPlaceholder = "Commentari"
