--- a/crates/choreo_i18n/assets/i18n/ro.toml
+++ b/crates/choreo_i18n/assets/i18n/ro.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Setări"
 DarkModeLabel = "Mod întunecat"
+SettingsUseSystemThemeLabel = "Folosește tema sistemului"
+SettingsPrimaryColorLabel = "Culoare primară"
+SettingsSecondaryColorLabel = "Culoare secundară"
+SettingsTertiaryColorLabel = "Culoare terțiară"
 AppTitle = "Vizualizator de coregrafie"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Comentariu"
