--- a/crates/choreo_i18n/assets/i18n/ru.toml
+++ b/crates/choreo_i18n/assets/i18n/ru.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Настройки"
 DarkModeLabel = "Темный режим"
+SettingsUseSystemThemeLabel = "Использовать системную тему"
+SettingsPrimaryColorLabel = "Основной цвет"
+SettingsSecondaryColorLabel = "Вторичный цвет"
+SettingsTertiaryColorLabel = "Третичный цвет"
 AppTitle = "Просмотр хореографии"
 ChoreographyAuthorPlaceholder = "Автор"
 ChoreographyCommentPlaceholder = "Комментарий"
