--- a/crates/choreo_i18n/assets/i18n/sk.toml
+++ b/crates/choreo_i18n/assets/i18n/sk.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Nastavenia"
 DarkModeLabel = "Tmavý režim"
+SettingsUseSystemThemeLabel = "Použiť systémovú tému"
+SettingsPrimaryColorLabel = "Primárna farba"
+SettingsSecondaryColorLabel = "Sekundárna farba"
+SettingsTertiaryColorLabel = "Terciárna farba"
 AppTitle = "Prehliadač choreografie"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Komentár"
