--- a/crates/choreo_i18n/assets/i18n/sl.toml
+++ b/crates/choreo_i18n/assets/i18n/sl.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Nastavitve"
 DarkModeLabel = "Temni način"
+SettingsUseSystemThemeLabel = "Uporabi sistemsko temo"
+SettingsPrimaryColorLabel = "Primarna barva"
+SettingsSecondaryColorLabel = "Sekundarna barva"
+SettingsTertiaryColorLabel = "Terciarna barva"
 AppTitle = "Pregledovalnik koreografije"
 ChoreographyAuthorPlaceholder = "Avtor"
 ChoreographyCommentPlaceholder = "Komentar"
