--- a/crates/choreo_i18n/assets/i18n/sq.toml
+++ b/crates/choreo_i18n/assets/i18n/sq.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Cilësimet"
 DarkModeLabel = "Modaliteti i errët"
+SettingsUseSystemThemeLabel = "Përdor temën e sistemit"
+SettingsPrimaryColorLabel = "Ngjyra kryesore"
+SettingsSecondaryColorLabel = "Ngjyra dytësore"
+SettingsTertiaryColorLabel = "Ngjyra terciare"
 AppTitle = "Shikues i koreografisë"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Koment"
