--- a/crates/choreo_i18n/assets/i18n/sr.toml
+++ b/crates/choreo_i18n/assets/i18n/sr.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Podešavanja"
 DarkModeLabel = "Tamni režim"
+SettingsUseSystemThemeLabel = "Користи системску тему"
+SettingsPrimaryColorLabel = "Примарна боја"
+SettingsSecondaryColorLabel = "Секундарна боја"
+SettingsTertiaryColorLabel = "Терцијарна боја"
 AppTitle = "Prikaz koreografije"
 ChoreographyAuthorPlaceholder = "Autor"
 ChoreographyCommentPlaceholder = "Komentar"
