--- a/crates/choreo_i18n/assets/i18n/sv.toml
+++ b/crates/choreo_i18n/assets/i18n/sv.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Inställningar"
 DarkModeLabel = "Mörkt läge"
+SettingsUseSystemThemeLabel = "Använd systemtema"
+SettingsPrimaryColorLabel = "Primär färg"
+SettingsSecondaryColorLabel = "Sekundär färg"
+SettingsTertiaryColorLabel = "Tertiär färg"
 AppTitle = "Koreografivisare"
 ChoreographyAuthorPlaceholder = "Författare"
 ChoreographyCommentPlaceholder = "Kommentar"
