--- a/crates/choreo_i18n/assets/i18n/tr.toml
+++ b/crates/choreo_i18n/assets/i18n/tr.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Ayarlar"
 DarkModeLabel = "Karanlık mod"
+SettingsUseSystemThemeLabel = "Sistem temasını kullan"
+SettingsPrimaryColorLabel = "Birincil renk"
+SettingsSecondaryColorLabel = "İkincil renk"
+SettingsTertiaryColorLabel = "Üçüncül renk"
 AppTitle = "Koreografi Görüntüleyici"
 ChoreographyAuthorPlaceholder = "Yazar"
 ChoreographyCommentPlaceholder = "Yorum"
