--- a/crates/choreo_i18n/assets/i18n/uk.toml
+++ b/crates/choreo_i18n/assets/i18n/uk.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Налаштування"
 DarkModeLabel = "Темний режим"
+SettingsUseSystemThemeLabel = "Використовувати системну тему"
+SettingsPrimaryColorLabel = "Основний колір"
+SettingsSecondaryColorLabel = "Вторинний колір"
+SettingsTertiaryColorLabel = "Третинний колір"
 AppTitle = "Перегляд хореографії"
 ChoreographyAuthorPlaceholder = "Автор"
 ChoreographyCommentPlaceholder = "Коментар"
