--- a/crates/choreo_i18n/assets/i18n/vi.toml
+++ b/crates/choreo_i18n/assets/i18n/vi.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "Cài đặt"
 DarkModeLabel = "Chế độ tối"
+SettingsUseSystemThemeLabel = "Sử dụng chủ đề hệ thống"
+SettingsPrimaryColorLabel = "Màu chính"
+SettingsSecondaryColorLabel = "Màu phụ"
+SettingsTertiaryColorLabel = "Màu bậc ba"
 AppTitle = "Trình xem biên đạo"
 ChoreographyAuthorPlaceholder = "Tác giả"
 ChoreographyCommentPlaceholder = "Ghi chú"
