--- a/crates/choreo_i18n/assets/i18n/zh.toml
+++ b/crates/choreo_i18n/assets/i18n/zh.toml
@@ -1,5 +1,9 @@
 ﻿SettingsTitle = "设置"
 DarkModeLabel = "深色模式"
+SettingsUseSystemThemeLabel = "使用系统主题"
+SettingsPrimaryColorLabel = "主要颜色"
+SettingsSecondaryColorLabel = "次要颜色"
+SettingsTertiaryColorLabel = "第三级颜色"
 AppTitle = "舞蹈编排查看器"
 ChoreographyAuthorPlaceholder = "作者"
 ChoreographyCommentPlaceholder = "备注"
