audio_player: add selectable awedio backend and split actors

--- a/crates/choreo_i18n/assets/i18n/en.toml
+++ b/crates/choreo_i18n/assets/i18n/en.toml
@@ -4,6 +4,9 @@ SettingsUseSystemThemeLabel = "Use system theme"
 SettingsPrimaryColorLabel = "Primary color"
 SettingsSecondaryColorLabel = "Secondary color"
 SettingsTertiaryColorLabel = "Tertiary color"
+SettingsAudioBackendLabel = "Audio backend"
+SettingsAudioBackendRodioLabel = "Rodio"
+SettingsAudioBackendAwedioLabel = "Awedio"
 AppTitle = "Choreography Viewer"
 ChoreographyAuthorPlaceholder = "Author"
 ChoreographyCommentPlaceholder = "Comment"
